--- a/Views/Partials/FilePickerTest.erb
+++ b/Views/Partials/FilePickerTest.erb
@@ -45,6 +45,7 @@ required data-errormessage-value-missing="Uh oh, somethings wrong!" data-errorme
 <input type ="integer" name="item[lowest_price]" value="60">
 <br><br>
 
+<input type="file" name="item[picture1_url]" label="your file">
 
 <input type="filepicker"
 name="item[picture1_url]"
@@ -59,6 +60,7 @@ data-fp-maxSize="10485760"
 style="display: none;"
 
 >
+
 
 
 <br><br>
