--- a/Views/Home.erb
+++ b/Views/Home.erb
@@ -1,3 +1,9 @@
 <h1>CouchRocket</h1>
 <br><br>
 <a href="/items">Add Item</a>
+<br><br>
+
+<h2>Items for Sale</h2>
+<% @items.each do |item| %>
+<a href="/items/<%= item.id %>">Sales Page for <%= item.brand %> <%= item.type %></a><br><br>
+<% end %>
