Added Stripe Code, need to debug

--- a/Views/Partials/AddItem.erb
+++ b/Views/Partials/AddItem.erb
@@ -5,6 +5,7 @@
 
 <label for "item[type]">Item Type</label><br>
 <select name="item[type]" form="new_item">
+  <option value="Couch">Couch</option>
   <option value="Bed">Bed</option>
   <option value="Bedroom Set">Bedroom Set</option>
   <option value="Bookshelf">Bookshelf</option>
@@ -18,7 +19,7 @@ Blah and foo<br>
 <br><br>
 
 <label for "item[brand]">Brand</label><br>
-<input type="text" name="item[brand]" value="New Brand">
+<input type="text" name="item[brand]" value="Davis">
 <br><br>
 
 <label for "item[notes]">Notes:</label><br>
