--- a/Views/Home.erb
+++ b/Views/Home.erb
@@ -5,5 +5,7 @@
 
 <h2>Items for Sale</h2>
 <% @items.each do |item| %>
-<a href="/items/<%= item.id %>">Sales Page for <%= item.brand %> <%= item.type %></a><br><br>
+<a href="/items/<%= item.id %>">
+<IMG HEIGHT=50 WIDTH=50 SRC="<%= item.picture1_url %>">
+Sales Page for <%= item.brand %> <%= item.type %></a><br><br>
 <% end %>
