--- a/Views/Partials/SalesPage.erb
+++ b/Views/Partials/SalesPage.erb
@@ -7,12 +7,74 @@
 	<h4><%= item.brand %> <%= item.type %></h4>
 	<p><%= item.notes %>
 <br><br>
-Originally Priced at:
-<b><%= item.original_price %></b>
+Originally Priced at: <b><%= item.original_price %></b>
 <br><br>
-Now selling for:
-<h4><p><%= item.asking_price %></p></h4>
+<h3>Now selling for: <b><%= item.asking_price %></b></h3>
 
-<button type="button">Purchase</button>
+
+
+<form action="/charge" method="POST" id="payment-form">
+  <span class="payment-errors"></span>
+
+<input name="item[asking_price]" type="hidden" value="<%= item.asking_price %>">
+
+<input name="item[id]" type="hidden" value="<%= item.id %>">
+
+<div class="form-row">
+    <label>
+      <span>Name</span>
+      <input name="buyer[name]" type="text" size="30" data-stripe="name"/>
+    </label>
+</div>
+
+<div class="form-row">
+    <label>
+      <span>Email</span>
+      <input name="buyer[email]" type="text" size="30" data-stripe="name"/>
+    </label>
+</div>
+
+<div class="form-row">
+    <label>
+      <span>Phone</span>
+      <input name="buyer[phone]" type="text" size="30" data-stripe="name"/>
+    </label>
+</div>
+
+
+
+<div class="form-row">
+    <label>
+      <span>Shipping Address</span>
+      <input name="buyer[address]" type="text" size="30"/>
+    </label>
+  </div>
+
+  <div class="form-row">
+    <label>
+      <span>Card Number</span>
+      <input type="text" size="20" data-stripe="number"/>
+    </label>
+  </div>
+
+  <div class="form-row">
+    <label>
+      <span>CVC</span>
+      <input type="text" size="4" data-stripe="cvc"/>
+    </label>
+  </div>
+
+  <div class="form-row">
+    <label>
+      <span>Expiration (MM/YYYY)</span>
+      <input type="text" size="2" data-stripe="exp-month"/>
+    </label>
+    <span> / </span>
+    <input type="text" size="4" data-stripe="exp-year"/>
+  </div>
+
+  <button type="submit">Submit Payment</button>
+</form>
 
 </div>
+
