Working on Stripe

--- a/Views/Layout.erb
+++ b/Views/Layout.erb
@@ -20,6 +20,7 @@
 <!-- Load jQuery version 1.11.1 (uncompressed) -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.js"></script>
 
+  <!-- Load own scripts -->
   <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 
 	<script type="text/javascript">
@@ -51,15 +52,18 @@
 	  } else {
 	    // response contains id and card, which contains additional card details
 	    var token = response.id;
-	    // Insert the token into the form so it gets submitted to the server
+
+	    // Insert the token and customer into the form so they gets submitted to my server
 	    $form.append($('<input type="hidden" name="stripeToken" />').val(token));
+
+
+
+
 	    // and submit
 	    $form.get(0).submit();
 	  }
 	};
 
   </script>
-
-
 
 <html>
