--- a/Views/Partials/AddItem.erb
+++ b/Views/Partials/AddItem.erb
@@ -5,8 +5,8 @@
 
 <label for "item[type]">Item Type</label><br>
 <select name="item[type]" form="new_item">
-  <option value="Couch">Couch</option>
   <option value="Bed">Bed</option>
+  <option value="Couch">Couch</option>
   <option value="Bedroom Set">Bedroom Set</option>
   <option value="Bookshelf">Bookshelf</option>
   <option value="Chair">Chair</option>
@@ -25,8 +25,7 @@ Blah and foo<br>
 <label for "item[notes]">Notes:</label><br>
 <textarea name="item[notes]"
 placeholder="To sell for the highest price, tell a story about what you like best about this item. What's cool or unique about it?"
-
-rows="4" cols="50" >Notes</textarea>
+rows="4" cols="50" >This is a great bed!</textarea>
 <br><br>
 
 <label for "item[original_price]">Original Price</label><br>
@@ -41,10 +40,10 @@ required data-errormessage-value-missing="Uh oh, somethings wrong!" data-errorme
 <label for "item[asking_price]">Asking Price</label><br>
 <input type ="integer" name="item[asking_price]" value="80">
 
-<br>
+<!-- <br>
 <label for "item[lowest_price]">Lowest Price You'll Accept</label><br>
 <input type ="integer" name="item[lowest_price]" value="60">
-<br><br>
+<br><br> -->
 
 <p>
 Attach up to 3 files. Each one can be up to 10 mb.</p>
