--- a/Views/Partials/SalesPage.erb
+++ b/Views/Partials/SalesPage.erb
@@ -4,9 +4,9 @@
 <img src="<%= item.picture3_url %>">
 <br><br>
 <h4><%= item.brand %> <%= item.type %></h4>
-Originally Priced at: <b><%= item.original_price %></b>
+Originally Priced at: <b><%= item.original_price/100 %></b>
 <br><br>
-<h3>Now selling for: <b><%= item.asking_price %></b></h3>
+<h3>Now selling for: <b><%= item.asking_price/100 %></b></h3>
 <br><br>
 Notes:
 <br><br>
@@ -24,34 +24,34 @@ Notes:
 <div class="form-row">
     <label>
       <span>Name</span>
-      <input name="buyer[name]" type="text" size="30" data-stripe="name" value="Peter Smith"/>
+      <input name="user[name]" type="text" size="30" data-stripe="name" value="Jim Smith"/>
     </label>
 </div>
 <br>
 <div class="form-row">
     <label>
       <span>Email</span>
-      <input name="buyer[email]" type="text" size="30" data-stripe="email" value="petersmith@gmail.com"/>
+      <input name="user[email]" type="text" size="30" data-stripe="email" value="jimsmith@gmail.com"/>
     </label>
 </div>
 <br>
 <div class="form-row">
     <label>
       <span>Phone</span>
-      <input name="buyer[phone]" type="text" size="30" data-stripe="phone" value="415-853-9060"/>
+      <input name="user[phone]" type="text" size="30" data-stripe="phone" value="415-853-9060"/>
     </label>
 </div>
 <br>
 <div class="form-row">
     <label>
       <span>Shipping Address</span>
-      <input name="buyer[address]" type="text" size="30" value="3243 Mason Way, San Francisco, CA 94023"/>
+      <input name="user[address]" type="text" size="30" value="3243 Mason Way, San Francisco, CA 94023"/>
     </label>
 </div>
 <br>
 <div class="form-row">
-    <label for "item[delivery_notes]">Delivery Notes:</label><br>
-    <textarea name="[item][delivery_notes]" placeholder="What's the best time and days to deliver?  Is there an access code? Do you have a dog who might bark at the delivery person? etc." rows="4" cols="50" >Please deliver at 3pm next Tuesday. My door code is #33</textarea>
+    <label for "order[delivery_notes]">Delivery Notes:</label><br>
+    <textarea name="order[delivery_notes]" placeholder="What's the best time and days to deliver?  Is there an access code? Do you have a dog who might bark at the delivery person? etc." rows="4" cols="50" >Please deliver at 3pm next Tuesday. My door code is #33</textarea>
 </div>
 
 <div class="form-row">
