--- a/Views/Layout.erb
+++ b/Views/Layout.erb
@@ -21,19 +21,29 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.js"></script>
 
   <!-- Load own scripts -->
-  <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+  <script type="text/javascript" src="https://js.stripe.com/v2/">
+	console.log("Stripe javascript loaded")
+
+  </script>
 
 	<script type="text/javascript">
   // This identifies your website in the createToken call below
+
+	console.log("form javascript loaded")
+
   Stripe.setPublishableKey('pk_test_zf9EXVq1RKyMFqX8Pv8xab9V');
 
+	console.log("public key set")
 
 	jQuery(function($) {
 	  $('#payment-form').submit(function(event) {
 	    var $form = $(this);
 
+	    console.log("Listening for submit")
+
 	    // Disable the submit button to prevent repeated clicks
 	    $form.find('button').prop('disabled', true);
+
 
 	    Stripe.card.createToken($form, stripeResponseHandler);
 
@@ -49,16 +59,15 @@
 	    // Show the errors on the form
 	    $form.find('.payment-errors').text(response.error.message);
 	    $form.find('button').prop('disabled', false);
-	  } else {
+	  }
+
+	  else {
 	    // response contains id and card, which contains additional card details
 	    var token = response.id;
 
 	    // Insert the token and customer into the form so they gets submitted to my server
 	    $form.append($('<input type="hidden" name="stripeToken" />').val(token));
 
-
-
-]]
 	    // and submit
 	    $form.get(0).submit();
 	  }
