--- a/Views/Layout.erb
+++ b/Views/Layout.erb
@@ -2,11 +2,9 @@
 <head>
   <title>CouchRocket</title>
 
-
-
-
-
-
+<link rel="stylesheet" href="jquery-ui.min.css">
+<script src="external/jquery/jquery.js"></script>
+<script src="jquery-ui.min.js"></script>
 
 </head>
 
