--- a/Views/Layout.erb
+++ b/Views/Layout.erb
@@ -2,6 +2,9 @@
 <head>
   <title>CouchRocket</title>
 
+<img src="http://i.imgur.com/iI7g2uKs.jpg" border="0" title="CouchRocket"></a>
+<h1>CouchRocket</h1>
+<br><br>
 <link rel="stylesheet" href="jquery-ui.min.css">
 <script src="external/jquery/jquery.js"></script>
 <script src="jquery-ui.min.js"></script>
