--- a/Views/Admin.erb
+++ b/Views/Admin.erb
@@ -1,7 +1,7 @@
 
 
 
-<table border="1" cellspacing="0">
+<table border="1" cellspacing="1">
 	<tr>
 		<th> Order ID </th>
 		<th> Date Created </th>
@@ -27,16 +27,22 @@
 		</td>
 		<td>
 			<% if order.shipped %>
-				<%= order.shipped_date %>
+				Delivered <%= order.shipped_date %>
 			<% else %>
-				Date Shipped: <%= order.shipped %>
-		<% end %>
+				No
+			<% end %>
 		</td>
-		<td><%= order.approved %></td>
+		<td>
+			<% if order.approved %>
+				Approved
+			<% else %>
+				No
+			<% end %>
+		</td>
 		<td>
 			<% if order.charged %>
 					Charged
-			<% elsif order.charged = :false  %>
+			<% elsif order.shipped && order.approved %>
 
 				<form action="/charge" method="post">
 				<input name="order[id]" type="hidden" value="<%= order.id %>">
