--- a/Views/Partials/SalesPage.erb
+++ b/Views/Partials/SalesPage.erb
@@ -1,15 +1,18 @@
 <div class="Sales Page">
-// <script type="text/javascript">
-// $( "#date" ).datepicker();
-// </script>
+<!--<script type="text/javascript">
+$( "#date" ).datepicker();
+</script>-->
 
 <img src="<%= item.picture1_url %>">
 <img src="<%= item.picture2_url %>">
 <img src="<%= item.picture3_url %>">
 <h4><%= item.brand %> <%= item.type %></h4>
-Originally Priced at: <b><%= item.original_price/100 %></b>
+Originally Priced at: $<b><%= item.original_price/100 %></b>
 <br>
-<h3>Now selling for: <b><%= item.asking_price/100 %></b></h3>
+<h3>Now selling for: $<b><%= item.asking_price/100%></b></h3>
+<h2>Delivery Cost: $30</h2>
+<h2>Total Cost: $<%= item.asking_price/100 + 30 %></h2>
+
 <br>
 Notes:
 <br>
