mailgun gem issues

--- a/Views/Admin.erb
+++ b/Views/Admin.erb
@@ -1,6 +1,3 @@
-
-
-
 <table border="1" cellspacing="1">
 	<tr>
 		<th> Order ID </th>
@@ -20,16 +17,18 @@
 	<tr>
 		<td><%= order.id %></td>
 		<td><%= order.created_at %></td>
-		<td><%= order.total_price/100 %></td>
+		<td><%= To_Dollars(order.total_price) %></td>
 		<td>
 			<% buyer = User.get(order.buyer_profile.user_id) %>
 			<%=	buyer.name %>
 		</td>
 		<td>
 			<% if order.shipped %>
-				Delivered <%= order.shipped_date %>
+				Delivered <%= order.shipped_date.strftime('%A, %B %d') %>
 			<% else %>
-				No
+				Expected Delivery Date:<br>
+				<%= order.target_delivery_date.strftime('%A, %B %d') %>,  <%= order.target_delivery_time_start.to_i %> p.m.
+			  to <%= order.target_delivery_time_start.to_i+2 %> p.m.
 			<% end %>
 		</td>
 		<td>
