--- a/Views/Admin.erb
+++ b/Views/Admin.erb
@@ -47,7 +47,7 @@
 				<input name="order[id]" type="hidden" value="<%= order.id %>">
 				<input type="submit" value="Charge Customer">
 				</form>
-
+			<% else No %>
 			<% end %>
 		</td>
 		<td><%= order.admin_notes %></td>
