--- a/Views/Home.erb
+++ b/Views/Home.erb
@@ -1,12 +1,14 @@
+<br>
+<br>
 <form action="/items">
     <input type="submit" value="Add Item">
 </form>
-
-<br><br>
-
-<h2>Items for Sale</h2>
-<% @items.each do |item| %>
-<a href="/items/<%= item.id %>">
-<IMG border="1" HEIGHT=50 WIDTH=50 SRC="<%= item.picture1_url %>">
-Sales Page for <%= item.brand %> <%= item.type %></a><br><br>
+<br>
+<% if @items %>
+	<h2>Items for Sale</h2>
+	<% @items.each do |item| %>
+		<a href="/items/<%= item.id %>">
+		<IMG border="1" HEIGHT=50 WIDTH=50 SRC="<%= item.picture1_url %>">
+		Sales Page for <%= item.brand %> <%= item.type %></a><br><br>
+	<% end %>
 <% end %>
