--- a/Views/Layout.erb
+++ b/Views/Layout.erb
@@ -5,7 +5,6 @@
 
 <img src="http://i.imgur.com/iI7g2uKs.jpg" border="0" title="CouchRocket"></a>
 <h1>CouchRocket</h1>
-<br><br>
 <link rel="stylesheet" href="jquery-ui.min.css">
 <script src="external/jquery/jquery.js"></script>
 <script src="jquery-ui.min.js"></script>
@@ -33,7 +32,7 @@
 
 	console.log("form javascript loaded")
 
-  Stripe.setPublishableKey('pk_test_zf9EXVq1RKyMFqX8Pv8xab9V');
+  Stripe.setPublishableKey(settings.stripe_public_key);
 
 	console.log("public key set")
 
