--- a/Views/SalesPage.erb
+++ b/Views/SalesPage.erb
@@ -7,8 +7,10 @@
 Originally Priced at: $<b><%= To_Dollars(item.original_price) %></b>
 <br>
 <h3>Now selling for: $<b><%= To_Dollars(item.asking_price) %></b></h3>
-<h2>Delivery Cost: $30</h2>
-<h2>Total Cost: $<%= To_Dollars(item.asking_price) + 30 %></h2>
+<h2>Delivery Cost: $<%= delivery_fee %></h2>
+<h2>Hassle Free Return Fee: $<%= return_fee %> </h2>
+<p>This ensures that you can return the item if you don't like it, and have us pay the full return fee.</p>
+<h2>Total Cost: $<%= To_Dollars(item.asking_price) + delivery_fee + return_fee %></h2>
 
 <br>
 Notes:
@@ -104,6 +106,59 @@ Notes:
 </div>
 
 
+<!-- Stripe -->
+  <script type="text/javascript" src="https://js.stripe.com/v2/">
+  console.log("Stripe javascript loaded")
 
+  </script>
+
+  <script type="text/javascript">
+  // This identifies your website in the createToken call below
+
+  console.log("form javascript loaded")
+
+  Stripe.setPublishableKey("<%= stripe_public_key %>");
+
+  console.log("public key set")
+
+  jQuery(function($) {
+    $('#payment-form').submit(function(event) {
+      var $form = $(this);
+
+      console.log("Listening for submit")
+
+      // Disable the submit button to prevent repeated clicks
+      $form.find('button').prop('disabled', true);
+
+
+      Stripe.card.createToken($form, stripeResponseHandler);
+
+      // Prevent the form from submitting with the default action
+      return false;
+    });
+  });
+
+  function stripeResponseHandler(status, response) {
+    var $form = $('#payment-form');
+
+    if (response.error) {
+      // Show the errors on the form
+      $form.find('.payment-errors').text(response.error.message);
+      $form.find('button').prop('disabled', false);
+    }
+
+    else {
+      // response contains id and card, which contains additional card details
+      var token = response.id;
+
+      // Insert the token and customer into the form so they gets submitted to my server
+      $form.append($('<input type="hidden" name="stripeToken" />').val(token));
+
+      // and submit
+      $form.get(0).submit();
+    }
+  };
+
+  </script>
 
 
