--- a/Views/AddItem.erb
+++ b/Views/AddItem.erb
@@ -1,14 +1,7 @@
 
 <h1>Add Item</h1>
-
-
-<h3>Return Fee</h3>
 <p>
-Add your item here.
-On the next page, we will get your debit card information so that we can pay you.
-We will also use this card to charge you a return fee of <%= return_fee %><br>
-The return fee is <i>only</i> charged if an item is returned.<br>
-To avoid returns and paying a return fee, please be as honest as possible about<br>any flaws or issues with your item, and include pictures of the flaws.</p>
+To avoid having your item returned and not getting paid, <i>1) please be honest about any significant flaws or issues with your item, and 2) include pictures of those flaws</i> so that the buyer can evaluate your item honestly.</p>
 
 <form id="new_item" action="/items" method="post" accept-charset="utf-8">
 
@@ -60,8 +53,8 @@ onchange="SuccessAlert()">
 <br><br>
 <input type="filepicker" name="item[picture3_url]" data-fp-button-text="Upload Image 3" data-fp-apikey="ALeZw9de5TTGfo53U9bfRz" data-fp-mimetypes="image/*" data-fp-container="modal" data-fp-maxsize="10485760"
 onchange="SuccessAlert()">
-
-<input type="submit">
+<br><br>
+<input type="submit" color="green">
 
 <script type="text/javascript">
 function SuccessAlert(){
@@ -70,6 +63,24 @@ function SuccessAlert(){
 </script>
 
 <script type="text/javascript" src="http://api.filepicker.io/v1/filepicker.js"></script>
+
+<div class="form-row">
+    <label>
+      <span>Pickup Notes</span>
+      <input name="shipper[email]" type="text" size="30" placeholder="russell@adamm.net"/>
+</div>
+
+<% if current_user.seller_profile.pickup_notes %>
+These are the pickup notes we currently have for you:<br>
+<%= current_user.seller_profile.pickup_notes %><br>
+If there are any changes, please put the new pickup notes below:<br>
+<% end %>
+
+<label for "pickup_notes">Pickup Notes:</label><br>
+<textarea name="pickup_notes"
+placeholder="What do we need to tell our delivery person about how to find your place or contact you? Is it an apartment building or a house?  Is there a gate code to contact you? Do you have a dog that may not like strangers?  etc. Thanks!"
+rows="4" cols="50"></textarea>
+</label>
 
 </form>
 
