--- a/Views/Admin.erb
+++ b/Views/Admin.erb
@@ -29,10 +29,13 @@
 				Expected Delivery Date:<br>
 				<b><%= order.target_delivery_date.strftime('%A, %B %d') %><br><%= order.target_delivery_time_start.to_i %> p.m.
 			  to <%= order.target_delivery_time_start.to_i+2 %> p.m.</b><br><br>
+
+			  <% if order.shipper_email_sent == false %>
 			  <form action="/ScheduleDelivery" method="get">
 				<input name="order_id" type="hidden" value="<%= order.id %>">
 				<input type="submit" value="Schedule Delivery">
 				</form>
+				<% end %>
 			<% end %>
 		</td>
 		<td>
