--- a/Views/Return.erb
+++ b/Views/Return.erb
@@ -13,7 +13,9 @@ Can you tell us why you're returning the item, so we can tell the seller?<br>
 <input name="order[id]" type="hidden" value="<%= order.id %>">
 <label for "order[return_reason]">Return Reason:</label><br>
 <textarea name="order[return_reason]" rows="2" cols="50"></textarea>
+<br>
 
-<input type="submit">Take it back..</input>
+<button style="background-color:pink" style="width:260">Take it back..</button>
+
 </form>
 </p>
