--- a/Views/Admin.erb
+++ b/Views/Admin.erb
@@ -2,8 +2,10 @@
 	<tr>
 		<th> Order ID </th>
 		<th> Date Created </th>
+		<th> Item </th>
 		<th> Total Price </th>
 		<th> Buyer </th>
+		<th> Seller </th>
 		<th> Delivered? </th>
 		<th> Approved? </th>
 		<th> Charged? </th>
@@ -17,10 +19,17 @@
 	<tr>
 		<td><%= order.id %></td>
 		<td><%= order.created_at %></td>
+		<td> <%= order.item.brand %> <%= order.item.type %><br>
+			<IMG border="1" HEIGHT=50 WIDTH=50 SRC="<%= order.item.picture1_url %>">
+		</td>
 		<td><%= To_Dollars(order.total_price) %></td>
 		<td>
-			<% buyer = User.get(order.buyer_profile.user_id) %>
-			<%=	buyer.name %>
+			<%=	order.buyer_name %><br>
+			<%=	order.buyer_phone %>
+		</td>
+		<td>
+			<%=	order.seller_name %><br>
+			<%=	order.seller_phone %>
 		</td>
 		<td>
 			<% if order.shipped %>
