--- a/Views/Emails/BuyerConfirmation.erb
+++ b/Views/Emails/BuyerConfirmation.erb
@@ -1,5 +1,5 @@
 <html>
-  <p>Hi <%= new_user.name %>. Thanks for your order! <br>
+  <p>Hi <%= user.name %>. Thanks for your order! <br>
   <h3>What happens next?</h3>
   <p>We'll deliver your <%= item.type.downcase %> on
   <%= order.target_delivery_date.strftime("%A, %B %d") %>
