--- a/Views/Layout.erb
+++ b/Views/Layout.erb
@@ -3,8 +3,9 @@
 <head>
   <title>CouchRocket</title>
 
-<img src="http://i.imgur.com/iI7g2uKs.jpg" border="0" title="CouchRocket"></a>
-<h1>CouchRocket</h1>
+<a href="/">
+<img src="http://i.imgur.com/iI7g2uKs.jpg" border="0" title="CouchRocket">
+<h1>CouchRocket</h1></a>
 
 <!-- Load jQuery version 1.11.1 (uncompressed) -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.js"></script>
