--- a/Views/Register.erb
+++ b/Views/Register.erb
@@ -6,7 +6,7 @@ Tell us a bit about you.</p>
 <div class="form-row">
     <label>
       <span>Name</span>
-      <input name="user[name]" type="text" size="30" value="Gavin Smith"/>
+      <input name="user[name]" type="text" size="30" value="Joe Seller"/>
     </label>
 </div>
 <br>
@@ -26,7 +26,7 @@ Tell us a bit about you.</p>
 <div class="form-row">
     <label>
       <span>Address</span>
-      <input name="user[address]" type="text" size="30" value="3243 Mason Way, San Francisco, CA 94023"/>
+      <input name="user[address]" type="text" size="30" value="412 Hampshire Way, #4, San Francisco, CA 94023"/>
     </label>
 </div>
 <button type="submit">Set me up!</button>
