--- a/Views/AddItem.erb
+++ b/Views/AddItem.erb
@@ -54,7 +54,6 @@ onchange="SuccessAlert()">
 <input type="filepicker" name="item[picture3_url]" data-fp-button-text="Upload Image 3" data-fp-apikey="ALeZw9de5TTGfo53U9bfRz" data-fp-mimetypes="image/*" data-fp-container="modal" data-fp-maxsize="10485760"
 onchange="SuccessAlert()">
 <br><br>
-<input type="submit" color="green">
 
 <script type="text/javascript">
 function SuccessAlert(){
@@ -64,23 +63,22 @@ function SuccessAlert(){
 
 <script type="text/javascript" src="http://api.filepicker.io/v1/filepicker.js"></script>
 
-<div class="form-row">
-    <label>
-      <span>Pickup Notes</span>
-      <input name="shipper[email]" type="text" size="30" placeholder="russell@adamm.net"/>
-</div>
-
-<% if current_user.seller_profile.pickup_notes %>
-These are the pickup notes we currently have for you:<br>
-<%= current_user.seller_profile.pickup_notes %><br>
-If there are any changes, please put the new pickup notes below:<br>
+<% if current_user.seller_profile  %>
+  <% if current_user.seller_profile.pickup_notes  %>
+  These are the pickup notes we currently have for you:<br>
+  <%= current_user.seller_profile.pickup_notes %><br>
+  If there are any changes, please put the new pickup notes below:<br>
+  <% end %>
 <% end %>
 
+<div class="form-row">
 <label for "pickup_notes">Pickup Notes:</label><br>
 <textarea name="pickup_notes"
 placeholder="What do we need to tell our delivery person about how to find your place or contact you? Is it an apartment building or a house?  Is there a gate code to contact you? Do you have a dog that may not like strangers?  etc. Thanks!"
 rows="4" cols="50"></textarea>
 </label>
+</div>
+<input type="submit" color="green">
 
 </form>
 
