--- a/Views/Home.erb
+++ b/Views/Home.erb
@@ -8,21 +8,35 @@
 }
 </style>
 
+<% if !user_signed_in? %>
+<a href="/sessions/new">Login</a><br>
+<a href="/register">Register</a><br><br>
+<% end %>
+
+<% if user_signed_in? %>
+<a href="/sessions/sign_out">Sign Out</a><br>
+<% end %>
+
+
+
+<% if user_signed_in? && current_user.is_admin? %>
 <div class = "admin">
 <h4><a href="/Admin">Admin Panel</a></h4> - Hooked up to Mailgun and Twilio for SMS<br>
-<a href="/register">Register</a>
 </div>
 <br><br>
-<form action="/AddItem">
-    <input type="submit" value="Add Item">
+<% end %>
+<% if user_items.nil? %>
+<p>Let's get you started! Click the big button below</p>
+<% end %>
+<form action="/items/new">
+    <input type="submit" value="Post Something for Sale!">
 </form>
 <br>
-<% if @items %>
-	<h2>Items for Sale</h2>
-	<% @items.each do |item| %>
+<% if !user_items.nil? %>
+	<h2>Your items for sale</h2>
+		<% @user_items.each do |item| %>
 		<a href="/items/<%= item.id %>">
 		<IMG border="1" HEIGHT=50 WIDTH=50 SRC="<%= item.picture1_url %>">
 		Sales Page for <%= item.brand %> <%= item.type %></a><br><br>
-	<% end %>
+		<% end %>
 <% end %>
-
